Fixing overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ header {
     position: relative;
     justify-content: start;
     width: 100%;
-    min-width: 320px;
+    min-width: 400px;
     height: auto;
 }
 .nav-bar {
@@ -32,6 +32,9 @@ padding: 20px;
 }
 .hamburguer-menu-icon {
     padding: 20px;
+}
+main {
+    min-width: 400px;
 }
 .title-container {
     background: var(--dark-pink);
@@ -59,7 +62,6 @@ padding: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
-    padding: 0 33px;
 }
 .image {
     width: 160px;
@@ -151,20 +153,21 @@ padding: 20px;
     display: flex;
     justify-content: space-around;
     background-color: var(--dark-pink);
-    height: 60px;
     align-content: center;
+    min-width: 400px;
 }
 .footer-text {
     color: white;
     font-size: var(--small);
-    width: 220px;
     margin: 5px;
     text-align: left;
+    width: 60%;
 }
 .social-networks {
-    margin: 8px 20px;
+    margin: 8px;
     color: white;
     font-size: var(--small);
+    width: 20%;
 }
 .follow-text {
     margin-top: 2px;
